[metadata]
name = hydra-ax-sweeper
description = Hydra Ax Sweeper plugin
long_description = file: README.md, NEWS.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Development Status :: 4 - Beta

url = https://hydra.cc/docs/plugins/ax_sweeper

author= Omry Yadan, Shagun Sodhani
author_email=omry@fb.com, sshagunsodhani@gmail.com

install_requires = 
    hydra-core>=1.0.0
    ax-platform>=0.1.20
    torch<1.8.0  # remove once torch 1.8.0 issue is addressed in Ax.

version = attr: hydra_plugins.hydra_ax_sweeper.__version__

[options]
include_package_data = True
package_dir =
    =hydra_plugins
packages = find_namespace:

[options.packages.find]
where = hydra_plugins
